src/oblig2patch/src/tests/oblig2/errors/undeclared_struct_fail.cmp
program undeclared_struct_fail
begin
    proc main()
    begin
    in
        (zot).bar := 42 /* error, zot.bar not declared */
    end
end